# batch-pdf-download

./: .gitignore  LICENSE  README.md  getUrls.py  main.py  pyproject.toml  rename.py  selectWindow.py  singlePdfDownload.py
src/get-tab-pdf/: main.py
src/get_tab_pdf/: findWindows.applescript  getUrls.applescript  getUrls.py  selectWindow.py
