[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name="get-tab-pdf"
version="0.1.0"
description="A macOS tool for downloading PDFs from Google Chrome in bulk"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

dependencies = [
    "requests",
    "simple-term-menu",
]

[project.scripts]
get-tab-pdf = "get_tab_pdf.main:main"

[tool.setuptools.package-data]
get_tab_pdf = ["*.applescript"]